# software-citation-sync

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  REUSE.toml  action.yml  pyproject.toml
.github/workflows/: coverage.yml  pyright.yml  release.yml  reuse.yml  ruff.yml  test.yml
src/software_citation_action/: cff.py  config.py  discovery.py  github_action.py  readme.py  software_heritage.py  sync.py
tests/: __init__.py  test_discovery.py  test_github_action.py  test_software_heritage.py  test_sync.py
