[project]
name = "software-citation-action"
version = "1.1.1"
description = "GitHub Action for keeping software citation metadata aligned with releases and Software Heritage."
readme = "README.md"
authors = [
    { name = "Arcangelo Massari", email = "github@a.arcangelomassari.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cffconvert>=2.0.0",
    "requests>=2.34.2",
    "ruamel-yaml>=0.19.1",
    "tomlkit>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "genbadge[coverage]>=1.1.3",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "requests-mock>=1.12.1",
    "reuse>=6.2.0",
    "ruff>=0.15.19",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "DOC",
    "CPY",
    "COM812",
    "FLY002",
    "ISC001",
    "SIM401",
    "TC001",
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"src/software_citation_action/github_action.py" = ["T201"]
"src/software_citation_action/cff.py" = ["S603"]
"tests/**" = ["S101"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
